# test-rust-cicd-caching

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
scripts/: test.sh
src/: main.rs  server.rs
