[package]
name = "test-rust-caching"
version = "0.1.0"
authors = ["Chakrit W <q.chakrit@gettgo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4",  features = ["serde"] }
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "70ff916", features = ["postgres", "numeric", "chrono",
"r2d2", "serde_json", "64-column-tables"] }
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0.56", features = ["derive"] }
serde_json = "1.0"
tera = "1.3"
tokio = { version = '1.0', features = ["full"]}
warp = "^0.3"
